--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Srishti Dwivedi's Portfolio Website</h1>
     <h2>I'm a Web Developer </h2>
     <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
     <img height="200" src="./assets/images/Screenshot 2023-07-02 145129.png" alt="movie ranking project" />
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/index.html">Birthday Invite Project</a></h3>
     <img height="200 " src="./assets/images/Screenshot 2023-07-02 145227.png" alt="birthday-invite project" />
     <hr />
     <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
